Adding full support for tracing arguments, and added support for multiple shared object libraries.  For some reason, objects and references aren't getting the right address, more work is needed to make sure that objects that are returned from the API get the right address so we can track them later.

--- a/adios2/Makefile
+++ b/adios2/Makefile
@@ -10,8 +10,8 @@ include ${TAU_MAKEFILE}
 TAUCXXFLAGS=$(shell tau_cxx.sh -tau:showincludes) $(TAU_DEFS)
 TAUCXXLIBS=$(shell tau_cxx.sh -tau:showsharedlibs)
 
-CXXFLAGS=-I./include -DADIOS2_USE_MPI -DMPICH_SKIP_MPICXX -DOMPI_SKIP_MPICXX -Dadios2_cxx11_EXPORTS -g -O3 -fPIC -std=c++11
-LDFLAGS = -shared -g -O3
+CXXFLAGS=-I./include -DADIOS2_USE_MPI -DMPICH_SKIP_MPICXX -DOMPI_SKIP_MPICXX -Dadios2_cxx11_EXPORTS -g -O0 -fPIC -std=c++11
+LDFLAGS = -shared -g -O0
 
 libadios2_wrap.so: adios2_wrap.o
 	$(TAU_CXX) $(LDFLAGS) -o $@ $< $(TAUCXXFLIBS) -ldl $(LDFLAGS)
@@ -20,7 +20,8 @@ adios2_wrap.o: wr.cpp
 	$(TAU_CXX) $(CXXFLAGS) $(TAUCXXFLAGS) -c $< -o $@
 
 wr.cpp: ../src/tau_wrap++ config.json
-	../src/tau_wrap++ $(ADIOS2_ROOT)/include/adios2.h -w $(ADIOS2_ROOT)/lib64/libadios2_cxx11.so -n adios2 -c config.json
+	rm -f symbol.log
+	../src/tau_wrap++ $(ADIOS2_ROOT)/include/adios2.h -w $(ADIOS2_ROOT)/lib64/libadios2_cxx11.so -w $(ADIOS2_ROOT)/lib64/libadios2_cxx11_mpi.so -n adios2 -c config.json
 clean:
 	/bin/rm -f adios2_wrap.o libadios2_wrap.so wr.cpp cursor.log symbol.log
 
