Testing on ubuntu 20 with gcc 9 and clang 10.  Added more error handling and forced termination if parsing the translation unit runs into any problems.

--- a/adios2/config.json
+++ b/adios2/config.json
@@ -10,12 +10,8 @@
         "c++",
         "-std=c++11",
         "-DADIOS2_USE_MPI",
-        "-I./include",
-        "-I/packages/llvm/11.0.1/include/c++/v1",
-        "-I/packages/llvm/11.0.1/include",
-        "-I/usr/local/packages/gcc/7.3.0/lib/gcc/powerpc64le-unknown-linux-gnu/7.3.0/include",
-        "-I/usr/local/packages/gcc/7.3.0/lib/gcc/powerpc64le-unknown-linux-gnu/7.3.0/include-fixed",
-        "-I/usr/local/packages/openmpi/4.0.1-gcc7.3/include",
+	"-I/home/khuck/spack/opt/spack/linux-ubuntu20.04-sandybridge/gcc-9.3.0/adios2-2.6.0-owfkowsc2a3geqdb4a6difho64j3p6p3/include",
+        "-I/home/khuck/spack/opt/spack/linux-ubuntu20.04-sandybridge/gcc-9.3.0/openmpi-4.0.5-w6fqyqgwx7yvbsng67h2sjqfz3ab734i/include",
         "-I/usr/include",
         "-I/usr/local/include"
     ],
