--- a/src/Makefile
+++ b/src/Makefile
@@ -9,8 +9,8 @@
 # IF you get this error:
 # tau_wrap++.cpp:38:10: fatal error: 'clang-c/Index.h' file not found
 # Then set this value to the location of clang-c/Index.h
-#LLVM_INCLUDE=-I/usr/lib/llvm-10/include
-LLVM_INCLUDE=-I/home/khuck/spack/opt/spack/linux-ubuntu20.04-sandybridge/gcc-9.3.0/llvm-11.0.1-uvhglupkewiqfjcl2yjnic253jrnxazh/include
+LLVM_INCLUDE=-I/sw/summit/llvm/10.0.1/10.0.1-0/include
+#LLVM_INCLUDE=-I/home/khuck/spack/opt/spack/linux-ubuntu20.04-sandybridge/gcc-9.3.0/llvm-11.0.1-uvhglupkewiqfjcl2yjnic253jrnxazh/include
 
 PWD=$(shell pwd)
 MYCXXFLAGS=-fPIC -I. -g -O3 -std=c++11 -Wall -Werror ${LLVM_INCLUDE}
